.devcontainer/manifests/influxdb/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: backend
          image: influxdb:2.7-alpine
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb2
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
      volumes:
      - name: influxdb-data
        persistentVolumeClaim:
          claimName: influxdb-pvc
