.devcontainer/manifests/influxdb/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
